substrate/frame/support/test/tests/pallet_ui/event_type_invalid_bound_2.stderr
error: Invalid `type RuntimeEvent`, associated type `RuntimeEvent` is reserved and must bound: `From<Event>` or `From<Event<Self>>` or `From<Event<Self, I>>`
  --> tests/pallet_ui/event_type_invalid_bound_2.rs:26:3
   |
26 |         type RuntimeEvent: IsType<<Self as frame_system::Config>::RuntimeEvent>;
   |         ^^^^
